# EagleInterpreter

./: .clang-format  CMakeLists.txt  Eagle定位与特性.md  README.md  test.eagle
docs/: AST.md  Eagle文档.md  Eagle语言设计说明书.md  实现细节.md
eagle_test/benchmark/: binary_tree.eagle  fib.eagle  hanoi.eagle
eagle_test/built_in_class/: dict.eagle  list.eagle  string.eagle  tuple.eagle
eagle_test/built_in_function/: built_in_function.eagle  file_read.txt  file_write.txt  read_from_file.eagle  write_to_file.eagle
eagle_test/class/: class.eagle  custom.eagle  inheritance.eagle  user_defined_method.eagle
eagle_test/error/: assign_operator_error.eagle  binary_operator_error.eagle  break_error.eagle  continue_error.eagle  custom_equals_error.eagle  dict_error.eagle  function_error.eagle  inheritance_error.eagle  list_error.eagle  paren_bracket_brace_error.eagle  return_error.eagle  semicolon_error.eagle  stackoverflow.eagle  stream_error.eagle  string_error.eagle  super_error.eagle  this_error.eagle  tuple_error.eagle  undefined_error.eagle
eagle_test/expression/: assign_operator.eagle  binary_operator.eagle  logical_operator.eagle  relation_operator.eagle  switch_case.eagle  ternary_if_else.eagle
eagle_test/function/: closure.eagle  function.eagle  lambda.eagle
eagle_test/statement/: block.eagle  break.eagle  continue.eagle  for.eagle  if.eagle  print.eagle  return.eagle  while.eagle
eagle_test/stream/: stream.eagle
lib/: BigFloat.cc  BigFloat.h  Number.cc  Number.h
src/: eagle.cpp  eagle.h  main.cpp  object.cpp  object.h
src/ast/: expr.cpp  expr.h  stmt.cpp  stmt.h
src/built_in_functions/: eagle_built_in_functions.cpp  eagle_built_in_functions.h  file_io.cpp  file_io.h  io.cpp  io.h  type_cast.cpp  type_cast.h
src/interpreter/: environment.cpp  environment.h  interpreter.cpp  interpreter.h  resolver.cpp  resolver.h
src/interpreter/modules/: eagle_callable.h  eagle_class.h  eagle_exceptions.cpp  eagle_exceptions.h  environment.cpp  environment.h
src/modules/: eagle_built_in_class.h  eagle_callable.h  eagle_class.cpp  eagle_class.h  eagle_container.h  eagle_dict.cpp  eagle_exceptions.cpp  eagle_exceptions.h  eagle_function.cpp  eagle_function.h  eagle_list.cpp  eagle_stack.cpp  eagle_stack.h  eagle_stream.cpp  eagle_stream.h  eagle_string.cpp  eagle_string.h  eagle_tuple.cpp
src/parser/: lexer.cpp  lexer.h  parser.cpp  parser.h  token.cpp  token.h
src/pretty_print/: pretty_print.cpp  pretty_print.h
src/shell/: eagle_shell.cpp  eagle_shell.h
src/tool/: ast_generator.cpp  ast_generator.h
src/util/: error_reporter.cpp  error_reporter.h
test/: main.cpp
